<resources>
    <string name="app_name">DFClient</string>

    <!-- Login -->
    <string name="login_username_text">Nom d\'utilisateur</string>
    <string name="login_password_text">Mot de passe</string>
    <string name="login_button_text">Se connecter</string>
    <string name="login_button_text_loading">Connexion en cours</string>
    <string name="login_button_text_error">Identifiants incorrects</string>

    <!-- Main menu -->
    <string name="intervention_selection_button">Sélectionner</string>
    <string name="intervention_archive_button">Archiver</string>

    <!-- Creation form -->
    <string name="intervention_creation_validation_button">Valider</string>
    <string name="intervention_creation_button">+</string>
    <string name="generate_lat_lng_from_address_button">Génèrer coordonnées</string>

    <!-- SITAC -->

    <!-- Divers -->
    <string name="hello_blank_fragment">Fragment vide</string>
    <string name="google_maps_key">AIzaSyCG9LaYxU-AN6bc-lqj7jS9kAFxMqF9R6M</string>
    <string name="login_iscodis_text">Je suis utilisateur CODIS</string>

    <string name="action_switch_to_means_table">Tableau des moyens</string>
    <string name="action_switch_to_drones_map">Carte des drones</string>
    <string name="action_refresh_map">Rafraîchir</string>
    <string name="logout">Se déconnecter</string>

    <!-- Mean Table-->
    <string name="mean_id">nom</string>
    <string name="column_1">demandé à</string>
    <string name="column_1bis">parti à</string>
    <string name="column_2">arrivé à</string>
    <string name="column_3">engagé à</string>
    <string name="column_4">liberé à</string>
    <string name="intervention_detail_unarchive">Désarchiver</string>
    <string name="intervention_detail_archive">Archiver</string>
    <string name="intervention_detail_dateformat">yyyy-MM-dd\'-\'HH:mm:ss</string>
    <string name="intervention_welcome_pleaseselect">Sélectionnez une intervention</string>
    <string name="new_mean">nouveau moyen</string>

    <string name="supprimer_button_mean_table">Libérer</string>
    <string name="popup_supprimer_button_mean_table">"Attention !\n Êtes vous sûr de vouloir libérer cet élément?"</string>

    <!-- Activity titles -->
    <string name="activity_main_menu_title">Interventions</string>
    <string name="activity_sitac_title">SITAC</string>

    <!-- Contextual Drawer -->
    <string name="supprimer_button_for_mean">Libérer</string>
    <string name="supprimer_button_for_defaut">Supprimer</string>
    <string name="refused_button">Refuser</string>
    <string name="validation_button">Valider</string>

    <!-- Gallery Drawer -->
    <string name="drone_not_found">Drone source inconnu</string>

    <!-- Validation Table -->
    <string name="title_validation_table">Liste des moyens à valider</string>

</resources>
