<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/refresh_datas"
        android:icon="@android:drawable/stat_notify_sync"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:showAsAction="ifRoom"
        android:title="@string/action_refresh_map"/>

    <item
        android:id="@+id/switch_to_means_table"
        android:icon="@android:drawable/ic_dialog_dialer"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:showAsAction="ifRoom"
        android:title="@string/action_switch_to_means_table"/>

    <item
        android:id="@+id/switch_to_sitac"
        android:icon="@android:drawable/ic_dialog_map"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:showAsAction="ifRoom"
        android:title="SITAC"/>

    <item
        android:id="@+id/logout_button"
        android:icon="@android:drawable/ic_lock_power_off"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:title="@string/logout"/>
</menu>