<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="edu.istic.tdf.dfclient.fragment.InterventionDetailFragment">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">


        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/horizontalScrollView"
            android:layout_above="@+id/interventionSelectionButton">

        </HorizontalScrollView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/interventionSelectionButton">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/scrollView2">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/intervention_name"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="20dp"
                            android:text=""
                            android:textSize="16sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="20dp"
                            android:text="Nom de code"
                            android:textSize="14sp"/>

                        <TextView
                            android:id="@+id/intervention_address"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="20dp"
                            android:textSize="16sp"
                            android:text=""
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="20dp"
                            android:text="Adresse"
                            android:textSize="14sp"/>

                        <TextView
                            android:id="@+id/intervention_date"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="20dp"
                            android:textSize="16sp"
                            android:text=""
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="20dp"
                            android:text="Date"
                            android:textSize="14sp"/>

                    </LinearLayout>
                </ScrollView>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollIndicators="right">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/title_validation_table"
                            android:id="@+id/title_validation_table" />

                        <ListView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/validation_table" />
                    </LinearLayout>

                </RelativeLayout>
            </LinearLayout>
        </FrameLayout>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intervention_selection_button"
                android:id="@+id/interventionSelectionButton"
                android:layout_gravity="right|bottom"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/interventionArchiveButton"
            android:layout_toStartOf="@+id/interventionArchiveButton" />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intervention_archive_button"
                android:id="@+id/interventionArchiveButton"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</FrameLayout>
